--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -46,6 +46,8 @@ html, body {
 /* Header Styles */
 header {
     margin-bottom: 2rem;
+    /* display: flex;
+    justify-content: space-between; */
 }
 
 header h1 {
@@ -65,7 +67,7 @@ header h1 {
 
 /* Main Layout */
 main {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
 }
@@ -105,6 +107,23 @@ main {
     margin-bottom: 0;
     border-bottom: none;
     padding-bottom: 0;
+}
+
+.card:first-of-type {
+    margin: 0 auto auto;
+    max-width: 400px;
+    min-width: 320px;
+}
+
+/* table */
+td:first-of-type {
+    padding-right: 20px;
+    width: 152px;
+}
+
+td {
+    border-bottom: 1px solid var(--divider-color);
+    vertical-align: top;
 }
 
 /* Button Styles */
@@ -237,14 +256,6 @@ main {
 
 .info-row .value {
     flex: 1;
-}
-
-td:first-of-type {
-    padding-right: 10px;
-}
-
-td {
-    vertical-align: top;
 }
 
 /* Grades Section */
@@ -408,6 +419,9 @@ input:invalid {
 
 /* Responsive Adjustments */
 @media (max-width: 768px) {
+    main {
+        display: grid;
+    }
     .container {
         padding: 1rem;
     }
@@ -423,5 +437,8 @@ input:invalid {
     
     .modal-content {
         width: 90%;
+    }
+    .label {
+        display: none;
     }
 }
