--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -7,7 +7,7 @@
     --text-secondary: #757575;
     --divider-color: #e0e0e0;
     --background: #f5f5f5;
-    --card-bg: #ffffff;
+    --card-bg: #d1d2fc;
     --success: #4caf50;
     --warning: #ff9800;
     --error: #f44336;
@@ -190,6 +190,7 @@ th {
 .search-container input {
     width: 100%;
     padding: 0.75rem 2.5rem 0.75rem 1rem;
+    background-color: var(--card-bg);
     border: 1px solid var(--divider-color);
     border-radius: var(--border-radius);
     transition: var(--transition);
@@ -453,4 +454,10 @@ input:invalid {
     .label {
         display: none;
     }
+    .card:first-of-type {
+        margin: 0 auto auto;
+        width: 100%;
+        min-width: 150px;
+        max-width: 100%;
+    }    
 }
