order update name

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -5,7 +5,7 @@
     --accent-color: #ff4081;
     --text-primary: #212121;
     --text-secondary: #757575;
-    --divider-color: #e0e0e0;
+    --divider-color: rgb(170, 170, 170);
     --background: #f5f5f5;
     --card-bg: #d1d2fc;
     --success: #4caf50;
