--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -113,6 +113,7 @@ main {
     margin: 0 auto auto;
     max-width: 500px;
     min-width: 330px;
+    width: 500px;
 }
 
 .card:last-of-type {
@@ -122,11 +123,12 @@ main {
 /* table */
 td:first-of-type {
     padding-right: 20px;
-    width: 152px;
+    width: 20%;
 }
 
 td:last-of-type {
     width: 80%;
+    margin-left: auto;
 }
 
 td {
@@ -431,7 +433,7 @@ input:invalid {
 }
 
 /* Responsive Adjustments */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     main {
         display: grid;
     }
@@ -457,7 +459,7 @@ input:invalid {
     .card:first-of-type {
         margin: 0 auto auto;
         width: 100%;
-        min-width: 150px;
+        min-width: 152px;
         max-width: 100%;
     }    
 }
