--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -5,9 +5,9 @@
     --accent-color: #ff4081;
     --text-primary: #212121;
     --text-secondary: #757575;
-    --divider-color: #e0e0e0;
+    --divider-color: rgb(170, 170, 170);
     --background: #f5f5f5;
-    --card-bg: #ffffff;
+    --card-bg: #d1d2fc;
     --success: #4caf50;
     --warning: #ff9800;
     --error: #f44336;
@@ -39,7 +39,6 @@ html, body {
 /* Container */
 .container {
     max-width: 2000px;
-    width: 80vh;
     margin: 0 auto;
     padding: 2rem;
 }
@@ -47,6 +46,8 @@ html, body {
 /* Header Styles */
 header {
     margin-bottom: 2rem;
+    /* display: flex;
+    justify-content: space-between; */
 }
 
 header h1 {
@@ -66,7 +67,7 @@ header h1 {
 
 /* Main Layout */
 main {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
 }
@@ -106,6 +107,37 @@ main {
     margin-bottom: 0;
     border-bottom: none;
     padding-bottom: 0;
+}
+
+.card:first-of-type {
+    margin: 0 auto auto;
+    max-width: 500px;
+    min-width: 330px;
+    width: 500px;
+}
+
+.card:last-of-type {
+    width: 100%;
+}
+
+/* table */
+td:first-of-type {
+    padding-right: 20px;
+    width: 20%;
+}
+
+td:last-of-type {
+    width: 80%;
+    margin-left: auto;
+}
+
+td {
+    border-bottom: 1px solid var(--divider-color);
+    vertical-align: top;
+}
+
+th {
+    width: 152px;
 }
 
 /* Button Styles */
@@ -160,6 +192,7 @@ main {
 .search-container input {
     width: 100%;
     padding: 0.75rem 2.5rem 0.75rem 1rem;
+    background-color: var(--card-bg);
     border: 1px solid var(--divider-color);
     border-radius: var(--border-radius);
     transition: var(--transition);
@@ -212,7 +245,7 @@ main {
     font-weight: 500;
 }
 
-.computer-id {
+.computer-data {
     color: var(--text-secondary);
     font-size: 0.9rem;
 }
@@ -220,6 +253,7 @@ main {
 /* computer Details */
 .computer-info {
     margin-bottom: 2rem;
+    
 }
 
 .info-row {
@@ -232,6 +266,7 @@ main {
     font-weight: 500;
     min-width: 100px;
     color: var(--text-secondary);
+    margin-bottom: auto;
 }
 
 .info-row .value {
@@ -398,7 +433,10 @@ input:invalid {
 }
 
 /* Responsive Adjustments */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
+    main {
+        display: grid;
+    }
     .container {
         padding: 1rem;
     }
@@ -415,4 +453,13 @@ input:invalid {
     .modal-content {
         width: 90%;
     }
+    .label {
+        display: none;
+    }
+    .card:first-of-type {
+        margin: 0 auto auto;
+        width: 100%;
+        min-width: 152px;
+        max-width: 100%;
+    }    
 }
