--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -7,7 +7,7 @@
     --text-secondary: #757575;
     --divider-color: rgb(170, 170, 170);
     --background: #f5f5f5;
-    --card-bg: #d1d2fc;
+    --card-bg: #e5f7f8;
     --success: #4caf50;
     --warning: #ff9800;
     --error: #f44336;
